--- a/web-tech.css
+++ b/web-tech.css
@@ -16,7 +16,7 @@ body{
     text-transform: uppercase;
 }
 h1{
-    font-size: 3rem; /*fontsize/basefont*/
+    font-size: 3.75rem; /*fontsize/basefont*/
     font-weight: 700;   /*bold*/
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
@@ -39,21 +39,75 @@ p{
     text-transform: none;
 }
 .logo {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
+    color: rgb(255, 255, 255);
 }
 a{
+    /* font-size: 1.4rem; */
     font-weight: 700;
     text-decoration: none;
-    color: rgb(159, 118, 87);
+    color: rgb(255, 255, 255);
 }
 a:hover{
-    color: rgb(60, 58, 71);
+    color: rgb(25, 188, 156)
 }
 form input,
 form textarea,
 form button{
-    font-family: verdana, sans-serif;
-    font-size: 18;
-    line-height: 1.55;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-transform: none;
+}
+/* navigation bar */
+.header{
+    width: 100%;
+    height: 104px;
+    background-color: rgb(44, 61, 79);
+}
+.nav{
+    width: 90%;
+    margin: auto;
+    padding: 32px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.nav ul li{
+    font-size: 0.9rem;
+    list-style: none;
+    padding: 24px;
+    display: inline;
+}
+/* sticky navigation bar */
+
+/* hero section */
+#hero{
+    background-color: rgb(25, 188, 156);
+    text-align: center;
+    padding: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#hero img{
+    height: 250px;
+    margin: 0px 0 20px 0;
+}
+.design{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 10px;
+    color: rgb(255, 255, 255);
+    margin-bottom: 25px;
+}
+.bar{
+    background-color: rgb(255, 255, 255);
+    display: inline-block;
+    width: 112px;
+    height: 4px;
+    border-radius: 100px;
+    /* margin: 20px ,auto; */
 }
