--- a/web-tech.css
+++ b/web-tech.css
@@ -22,7 +22,7 @@ h1{
     color: rgb(255, 255, 255);
 }
 h2{
-    font-size: 2rem; /*fontsize/basefont*/
+    font-size: 2.8rem; /*fontsize/basefont*/
     font-weight: 700;   /*bold*/
     letter-spacing: 2px;
     color: rgb(44, 61, 79);
@@ -34,8 +34,10 @@ h4{
     color: rgb(255, 255, 255);
 }
 p{
+    font-size: 1.3rem;
+    /* letter-spacing: 1px; */
     color: rgb(255, 255, 255);
-    font-weight: 500;   
+    font-weight: 400;   
     text-transform: none;
 }
 .logo {
@@ -95,11 +97,12 @@ form button{
     margin: 0px 0 20px 0;
 }
 .design{
+    font-size: 1.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
-    padding-top: 10px;
+    /* padding-top: 5px; */
     color: rgb(255, 255, 255);
     margin-bottom: 25px;
 }
@@ -110,4 +113,27 @@ form button{
     height: 4px;
     border-radius: 100px;
     /* margin: 20px ,auto; */
+}
+/* portfolio section */
+#portfolio h2{
+    text-align: center;
+    margin-top: 80px;
+}
+#portfolio div{
+    color: rgb(44, 61, 79);
+}
+#portfolio .bar{
+    background-color: rgb(44, 61, 79);
+}
+.gallery{
+    max-width: 89%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2.2rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+img{
+    max-width: 100%;
+    border-radius: 8px;
 }
