--- a/web-tech.css
+++ b/web-tech.css
@@ -5,13 +5,14 @@
     padding: 0;
     margin: 0;
 }
+
 /*typography*/
 html{
     font-size: 18px;
 }
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.5;  /*L-H= lineheight/base font*/
+    line-height: 1.6;  /*L-H= lineheight/base font*/
     color: rgb(0, 0, 0);
     text-transform: uppercase;
 }
@@ -28,8 +29,8 @@ h2{
     color: rgb(44, 61, 79);
 }
 h4{
-    font-size: 1.2rem; /*fontsize/basefont*/
-    font-weight: 700;   /*bold*/
+    font-size: 1.3rem; /*fontsize/basefont*/
+    font-weight: 800;   /*bold*/
     letter-spacing: 1px;
     color: rgb(255, 255, 255);
 }
@@ -37,7 +38,7 @@ p{
     font-size: 1.3rem;
     /* letter-spacing: 1px; */
     color: rgb(255, 255, 255);
-    font-weight: 400;   
+    font-weight: 350;   
     text-transform: none;
 }
 .logo {
@@ -62,6 +63,7 @@ form button{
     line-height: 1.5;
     text-transform: none;
 }
+
 /* navigation bar */
 .header{
     width: 100%;
@@ -81,7 +83,9 @@ form button{
     padding: 24px;
     display: inline;
 }
+
 /* sticky navigation bar */
+
 
 /* hero section */
 #hero{
@@ -101,7 +105,7 @@ form button{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 16px;
     /* padding-top: 5px; */
     color: rgb(255, 255, 255);
     margin-bottom: 25px;
@@ -114,6 +118,7 @@ form button{
     border-radius: 100px;
     /* margin: 20px ,auto; */
 }
+
 /* portfolio section */
 #portfolio h2{
     text-align: center;
@@ -136,4 +141,158 @@ form button{
 img{
     max-width: 100%;
     border-radius: 8px;
+}
+
+/* about section */
+#about{
+    color: rgb(255, 255, 255);
+    background-color: rgb(25, 188, 156);
+    text-align: center;
+    margin-top: 95px;
+}
+#about h2{
+    color: rgb(255, 255, 255);
+    padding-top: 80px;
+}
+#about p{
+    font-size: 1rem;
+}
+.desc{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: justify;
+    gap: 32px;
+    padding-left: 290px;
+    padding-right: 300px;
+}
+.dbtn{
+    width: 228px;
+    height: 61px;
+    font-size: 1rem;
+    border: 1.5px solid;
+    border-radius: 8px;
+    background: transparent;
+    color: rgb(255, 255, 255);
+    padding: 20px 0px 20px 0px;
+    margin-top: 44px;
+    margin-bottom: 95px;
+}
+.dbtn i{
+    padding-right: 12px;
+}
+.dbtn:hover{
+    color: rgb(44, 61, 79);
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(255,255,255);
+    cursor: pointer;
+}
+
+/* contact form */
+#contact{
+    color: rgb(44, 61, 79);
+    text-align: center;
+    margin-top: 95px;
+}
+#contact div{
+    color: rgb(44, 61, 79);
+}
+#contact .bar{
+    background-color: rgb(44, 61, 79);
+}
+
+/* form */
+form div{
+    margin-right: 350px;
+    margin-left: 350px;
+    margin-bottom: 2rem;
+}
+form label{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: rgba(44, 61, 79, .7);
+    display: block;
+    text-transform: capitalize;
+    letter-spacing: 1.2px;
+    text-align: start;
+}
+form input{
+    height: 10px;
+    border: none;
+    border-bottom: 1px solid rgba(44, 61, 79, .3);
+    padding: 1rem;
+    width: 100%;
+    color: rgb(255, 255, 255);
+}
+form textarea{
+    height: 105px;
+    border: none;
+    border-bottom: 1px solid rgba(44, 61, 79, .3);
+    padding: 1rem;
+    width: 100%;
+    color: rgb(255, 255, 255);
+    /* resize: none; */
+}
+form input: focus,
+form textarea: :focus{
+    outline: none;
+}
+form button{
+    width: 105px;
+    height: 65px;
+    color: rgb(255, 255, 255);
+    background-color: rgba(25, 188, 156, .7);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 989px;
+}
+
+/* social icons */
+#footer{
+    background-color: rgb(44, 61, 79);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    gap: 32px;
+    padding-top: 64px;
+    padding-bottom: 84px;   
+}
+#footer p{
+    font-size: 1rem;
+    padding-top: 20px;
+    font-weight: 300;
+}
+.social-icon{
+    font-size: 1.25rem;
+    list-style: none;
+    display: inline-flex;
+    width: 3.25rem;
+    height: 3.25rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.social-icon li{
+    padding: 12px;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 50%;
+    margin-left: 0.8rem;
+    margin-left: 0.8rem;
+}
+.anchor{
+    padding-right: 84px;
+}
+.anchor a{
+    color:rgb(25, 188, 156);
+    font-weight: 400;
+    text-decoration: underline;
+}
+footer{
+    background-color: rgb(26, 37, 47);
+    text-align: center;
+}
+.footer p{
+    font-size: 0.8rem;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
