--- a/web-tech.css
+++ b/web-tech.css
@@ -9,6 +9,7 @@
 /*typography*/
 html{
     font-size: 18px;
+    scroll-behavior: smooth;
 }
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -65,6 +66,10 @@ form button{
 }
 
 /* navigation bar */
+header{
+    position: sticky;
+    top: 0px;
+}
 .header{
     width: 100%;
     height: 104px;
@@ -83,9 +88,6 @@ form button{
     padding: 24px;
     display: inline;
 }
-
-/* sticky navigation bar */
-
 
 /* hero section */
 #hero{
